--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,8 +1,31 @@
+* {
+	-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+html {
+  background: url(/images/background.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: white;
+  padding-top: 1em;
 }
 
 a {
   color: #00B7FF;
+}
+
+.container {
+    width: 75%;
+    margin: auto;
+    background-color: rgba(25, 25, 25, .5);
+    padding: 1em;
+    border-radius: 5px;
 }
