--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -5,16 +5,40 @@
     box-sizing: border-box;
 }
 
-html {
+/*html {
   background: url(/images/background.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}*/
+
+.fade {
+	opacity: .5;
+}
+
+.page-header {
+	font-size: 1.5em;
+	text-align: center;
+
+	background: url(/images/background.jpg);
+	/* Set rules to fill background */
+	min-height: 15%;
+	min-width: 1024px;
+
+	/* Set up proportionate scaling */
+	width: 100%;
+	height: auto;
+
+	/* Set up positioning */
+	position: fixed;
+	top: 0;
+	left: 0;
+
+	padding: 1em;
 }
 
 body {
-  color: white;
   padding-top: 1em;
 }
 
