--- a/components/homepage.html
+++ b/components/homepage.html
@@ -1,67 +1,83 @@
-<div class="page-section" ng-controller="MainController">
+<div ng-controller="MainController">
 
-    <h2 class="sub-header">Player Rankings</h2>
+    <div class="sidebar">
 
-    <div>
-        <div class="ranks-header-item wrapper" >
-            Current Position Group:
-            <select class="brand-select" ng-model="currentPosition">
-                <option ng-repeat="position in positions">{{position}}</option>
-            </select>
-        </div>
+        Helpful Pages:
 
-        <div class="legend wrapper">
-            <div class="container player-card">
-                <div class="right">
-                    <span class="player-watch">Watch Candidate</span>
-                    <span class="player-sleeper">Sleeper</span>
-                    <span class="player-diff">
-                        <span class="positive">Difference in </span><span class="negative">Rank</span>
-                    </span>
-                    <span class="player-rank legend-player">Rank</span>
+        <div class="page-flow-item wrapper" ng-click="goToADP()">ADP Trends</div>
+        <div class="page-flow-item wrapper" ng-click="goToUrl('cbs ranks')">CBSsports Rankings</div>
+        <div class="page-flow-item wrapper" ng-click="goToUrl('nfl ranks')">NFL.com Rankings</div>
 
-                </div>
-                <span class="legend-player">Player Name</span>
-            </div>
-        </div>
+
     </div>
 
-    <div class="page-left">
 
-        <div class="wrapper">
-            <h3>Analyst: Brent Young</h3>
+    <div class="page-section">
 
-            <div class="container player-card" ng-repeat="player in ranks['Brent Young'][currentPosition]">
-                <div class="right">
-                    <span class="player-watch" ng-show="player.watcher">W</span>
-                    <span class="player-sleeper" ng-show="player.sleeper">S</span>
-                    <span class="player-diff" ng-show="player.diff !== 0 && player.diff !== null" ng-class="{negative: player.diff < 0, positive: player.diff > 0}">
-                        <span ng-if="player.diff > 0">+</span>{{player.diff}}
-                    </span>
-                    <span class="player-rank">{{player.rank + 1}}</span>
+        <h2 class="sub-header">Player Rankings</h2>
 
+        <div>
+            <div class="ranks-header-item wrapper" >
+                Current Position Group:
+                <select class="brand-select" ng-model="currentPosition">
+                    <option ng-repeat="position in positions">{{position}}</option>
+                </select>
+            </div>
+
+            <div class="legend wrapper">
+                <div class="container player-card">
+                    <div class="right">
+                        <span class="player-watch">Watch Candidate</span>
+                        <span class="player-sleeper">Sleeper</span>
+                        <span class="player-diff">
+                            <span class="positive">Difference in </span><span class="negative">Rank</span>
+                        </span>
+                        <span class="player-rank legend-player">Rank</span>
+
+                    </div>
+                    <span class="legend-player">Player Name</span>
                 </div>
-                <span class="player-name">{{player.player}}</span>
             </div>
         </div>
-    </div>
 
-    <div class="page-right">
+        <div class="page-left">
 
-        <div class="wrapper">
-            <h3>Analyst: Jon Doyen</h3>
-            <div class="container player-card" ng-repeat="player in ranks['Jon Doyen'][currentPosition]">
-                <div class="left">
-                    <span class="player-rank">{{player.rank + 1}}</span>
-                    <span class="player-diff" ng-show="player.diff !== 0 && player.diff !== null" ng-class="{negative: player.diff < 0, positive: player.diff > 0}">
-                        <span ng-if="player.diff > 0">+</span>{{player.diff}}
-                    </span>
-                    <span class="player-sleeper" ng-show="player.sleeper">S</span>
-                    <span class="player-watch" ng-show="player.watcher">W</span>
+            <div class="wrapper">
+                <h3>Analyst: Brent Young</h3>
+
+                <div class="container player-card" ng-repeat="player in ranks['Brent Young'][currentPosition]">
+                    <div class="right">
+                        <span class="player-watch" ng-show="player.watcher">W</span>
+                        <span class="player-sleeper" ng-show="player.sleeper">S</span>
+                        <span class="player-diff" ng-show="player.diff !== 0 && player.diff !== null" ng-class="{negative: player.diff < 0, positive: player.diff > 0}">
+                            <span ng-if="player.diff > 0">+</span>{{player.diff}}
+                        </span>
+                        <span class="player-rank">{{player.rank + 1}}</span>
+
+                    </div>
+                    <span class="player-name">{{player.player}}</span>
                 </div>
-                <span class="player-name">{{player.player}}</span>
             </div>
         </div>
+
+        <div class="page-right">
+
+            <div class="wrapper">
+                <h3>Analyst: Jon Doyen</h3>
+                <div class="container player-card" ng-repeat="player in ranks['Jon Doyen'][currentPosition]">
+                    <div class="left">
+                        <span class="player-rank">{{player.rank + 1}}</span>
+                        <span class="player-diff" ng-show="player.diff !== 0 && player.diff !== null" ng-class="{negative: player.diff < 0, positive: player.diff > 0}">
+                            <span ng-if="player.diff > 0">+</span>{{player.diff}}
+                        </span>
+                        <span class="player-sleeper" ng-show="player.sleeper">S</span>
+                        <span class="player-watch" ng-show="player.watcher">W</span>
+                    </div>
+                    <span class="player-name">{{player.player}}</span>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 </div>
