--- a/components/homepage.html
+++ b/components/homepage.html
@@ -1,47 +1,37 @@
-<div ng-controller="MainController">
+<div>
 
-    <div class="sidebar">
 
-        <div class="page-flow-item wrapper" ng-click="goToADP()">ADP Trends</div>
-        <div class="page-flow-item wrapper" ng-click="goToUrl('cbs ranks')">CBSsports Rankings</div>
-        <div class="page-flow-item wrapper" ng-click="goToUrl('nfl ranks')">NFL.com Rankings</div>
+    <div class="page-section wrapper image-container">
+
+        <div class="bio">
+            <div class="bio-image"></div>
+            <div class="bio-text">{{ podMessage }}</div>
+        </div>
+        <div class="social">
+            <span class="social-item">Email: FactOrFantasyPod@gmail.com</span>
+            <span class="social-item fa fa-twitter-square" ng-click="goToTwitter('Brent')" aria-hidden="true">Brent</span>
+            <span class="social-item fa fa-twitter-square" ng-click="goToTwitter('Jon')" aria-hidden="true">Jon</span>
+        </div>
 
 
     </div>
 
+    <hr/>
+
 
     <div class="page-section">
 
-        <h2 class="sub-header">Player Rankings</h2>
-
-        <div>
-            <div class="ranks-header-item wrapper" >
-                Current Position Group:
-                <select class="brand-select" ng-model="currentPosition">
-                    <option ng-repeat="position in positions">{{position}}</option>
-                </select>
-            </div>
-
-            <div class="legend wrapper">
-                <div class="container player-card">
-                    <div class="right">
-                        <span class="player-watch">Watch Candidate</span>
-                        <span class="player-sleeper">Sleeper</span>
-                        <span class="player-diff">
-                            <span class="positive">Difference in </span><span class="negative">Rank</span>
-                        </span>
-                        <span class="player-rank legend-player">Rank</span>
-
-                    </div>
-                    <span class="legend-player">Player Name</span>
-                </div>
-            </div>
+        <div class="wrapper section-header" >
+            Current Position Group:
+            <select class="brand-select" ng-model="currentPosition">
+                <option ng-repeat="position in positions">{{position}}</option>
+            </select>
         </div>
 
         <div class="page-left">
 
             <div class="wrapper">
-                <h3>Analyst: Brent Young</h3>
+                <p>Analyst: Brent Young</p>
 
                 <div class="container player-card" ng-repeat="player in ranks['Brent Young'][currentPosition]">
                     <div class="right">
@@ -61,7 +51,7 @@
         <div class="page-right">
 
             <div class="wrapper">
-                <h3>Analyst: Jon Doyen</h3>
+                <p>Analyst: Jon Doyen</p>
                 <div class="container player-card" ng-repeat="player in ranks['Jon Doyen'][currentPosition]">
                     <div class="left">
                         <span class="player-rank">{{player.rank + 1}}</span>
@@ -73,6 +63,20 @@
                     </div>
                     <span class="player-name">{{player.player}}</span>
                 </div>
+            </div>
+        </div>
+        <div class="legend wrapper">
+            <div class="container player-card">
+                <div class="right">
+                    <span class="player-watch">Watch Candidate</span>
+                    <span class="player-sleeper">Sleeper</span>
+                    <span class="player-diff">
+                        <span class="positive">Difference in </span><span class="negative">Rank</span>
+                    </span>
+                    <span class="player-rank legend-player">Rank</span>
+
+                </div>
+                <span class="legend-player">Player Name</span>
             </div>
         </div>
 
