--- a/stylesheets/teams/teams.css
+++ b/stylesheets/teams/teams.css
@@ -1,11 +1,58 @@
+.teams-container {
+    padding: 1em;
+    margin-top: 3em;
+    color: white;
+}
+
+.match-team {
+    font-size: 1.3em;
+    font-weight: bold;
+    width: 50%;
+    display: inline-block;
+    text-align: center;
+    padding: .625em;
+}
+
+.matchup {
+    padding: 1em;
+    position: relative;
+}
+
+.vs-ind {
+    position: absolute;
+    left: 47.5%;
+    font-size: 2em;
+    top: 17.5%;
+    background: black;
+    padding: .3em;
+    border: 2px solid white;
+    border-radius: 100px;
+}
+
+.team-img-left, .team-img-right {
+    position: absolute;
+    top: 25%;
+    left: 0;
+    width: 10%;
+}
+
+.team-img-left img, .team-img-right img {
+    width: 58%;
+}
+
+.team-img-right {
+    left: initial;
+    right: 0;
+}
+
 .cardinals {
     background-color: #B0063A;
     color: white;
     box-sizing: border-box;
 }
 
-.cardinals .with-border {
-    border: 1px solid white;
+.cardinals.with-border {
+    border: 2px solid white;
 }
 
 .jets {
@@ -14,8 +61,8 @@
     box-sizing: border-box;
 }
 
-.jets .with-border {
-    border: 1px solid white;
+.jets.with-border {
+    border: 2px solid white;
 }
 
 .texans {
@@ -24,8 +71,8 @@
     box-sizing: border-box;
 }
 
-.texans .with-border {
-    border: 1px solid #00143F;
+.texans.with-border {
+    border: 2px solid #00143F;
 }
 
 .colts {
@@ -34,8 +81,8 @@
     box-sizing: border-box;
 }
 
-.colts .with-border {
-    border: 1px solid white;
+.colts.with-border {
+    border: 2px solid white;
 }
 
 .packers {
@@ -44,8 +91,8 @@
     box-sizing: border-box;
 }
 
-.packers .with-border {
-    border: 1px solid #2A433A;
+.packers.with-border {
+    border: 2px solid #2A433A;
 }
 
 .cowboys {
@@ -54,8 +101,8 @@
     box-sizing: border-box;
 }
 
-.cowboys .with-border {
-    border: 1px solid white;
+.cowboys.with-border {
+    border: 2px solid white;
 }
 
 .seahawks {
@@ -64,8 +111,8 @@
     box-sizing: border-box;
 }
 
-.seahawks .with-border {
-    border: 1px solid #002A5C;
+.seahawks.with-border {
+    border: 2px solid #002A5C;
 }
 
 .falcons {
@@ -74,8 +121,8 @@
     box-sizing: border-box;
 }
 
-.falcons .with-border {
-    border: 1px solid black;
+.falcons.with-border {
+    border: 2px solid black;
 }
 
 .raiders {
@@ -84,8 +131,8 @@
     box-sizing: border-box;
 }
 
-.raiders .with-border {
-    border: 1px solid #BBC4CA;
+.raiders.with-border {
+    border: 2px solid #BBC4CA;
 }
 
 .chiefs {
@@ -94,8 +141,8 @@
     box-sizing: border-box;
 }
 
-.chiefs .with-border {
-    border: 1px solid white;
+.chiefs.with-border {
+    border: 2px solid white;
 }
 
 .patriots {
@@ -104,8 +151,8 @@
     box-sizing: border-box;
 }
 
-.patriots .with-border {
-    border: 1px solid #DA2128;
+.patriots.with-border {
+    border: 2px solid #DA2128;
 }
 
 .bengals {
@@ -114,8 +161,8 @@
     box-sizing: border-box;
 }
 
-.bengals .with-border {
-    border: 1px solid white;
+.bengals.with-border {
+    border: 2px solid white;
 }
 
 .dolphins {
@@ -124,8 +171,8 @@
     box-sizing: border-box;
 }
 
-.dolphins .with-border {
-    border: 1px solid #F58220;
+.dolphins.with-border {
+    border: 2px solid #F58220;
 }
 
 .steelers {
@@ -134,8 +181,8 @@
     box-sizing: border-box;
 }
 
-.steelers .with-border {
-    border: 1px solid #FFC20E;
+.steelers.with-border {
+    border: 2px solid #FFC20E;
 }
 
 .lions {
@@ -144,8 +191,8 @@
     box-sizing: border-box;
 }
 
-.lions .with-border {
-    border: 1px solid #B0B7BC;
+.lions.with-border {
+    border: 2px solid #B0B7BC;
 }
 
 .rams {
@@ -154,8 +201,8 @@
     box-sizing: border-box;
 }
 
-.rams .with-border {
-    border: 1px solid #C6A876;
+.rams.with-border {
+    border: 2px solid #C6A876;
 }
 
 .bears {
@@ -164,8 +211,8 @@
     box-sizing: border-box;
 }
 
-.bears .with-border {
-    border: 1px solid #F26522;
+.bears.with-border {
+    border: 2px solid #F26522;
 }
 
 .jaguars {
@@ -174,8 +221,8 @@
     box-sizing: border-box;
 }
 
-.jaguars .with-border {
-    border: 1px solid #006576;
+.jaguars.with-border {
+    border: 2px solid #006576;
 }
 
 .saints {
@@ -184,8 +231,8 @@
     box-sizing: border-box;
 }
 
-.saints .with-border {
-    border: 1px solid #9F8958;
+.saints.with-border {
+    border: 2px solid #9F8958;
 }
 
 .panthers {
@@ -194,8 +241,8 @@
     box-sizing: border-box;
 }
 
-.panthers .with-border {
-    border: 1px solid #0099D9;
+.panthers.with-border {
+    border: 2px solid #0099D9;
 }
 
 .giants {
@@ -204,8 +251,8 @@
     box-sizing: border-box;
 }
 
-.giants .with-border {
-    border: 1px solid #C9243F;
+.giants.with-border {
+    border: 2px solid #C9243F;
 }
 
 .ravens {
@@ -214,8 +261,8 @@
     box-sizing: border-box;
 }
 
-.ravens .with-border {
-    border: 1px solid #D2AA41;
+.ravens.with-border {
+    border: 2px solid #D2AA41;
 }
 
 .titans {
@@ -224,8 +271,8 @@
     box-sizing: border-box;
 }
 
-.titans .with-border {
-    border: 1px solid #DA2128;
+.titans.with-border {
+    border: 2px solid #DA2128;
 }
 
 .browns {
@@ -234,8 +281,8 @@
     box-sizing: border-box;
 }
 
-.browns .with-border {
-    border: 1px solid #311D00;
+.browns.with-border {
+    border: 2px solid #311D00;
 }
 
 .redskins {
@@ -244,8 +291,8 @@
     box-sizing: border-box;
 }
 
-.redskins .with-border {
-    border: 1px solid black;
+.redskins.with-border {
+    border: 2px solid black;
 }
 
 .eagles {
@@ -254,8 +301,8 @@
     box-sizing: border-box;
 }
 
-.eagles .with-border {
-    border: 1px solid black;
+.eagles.with-border {
+    border: 2px solid black;
 }
 
 .49ers {
@@ -264,8 +311,8 @@
     box-sizing: border-box;
 }
 
-.49ers .with-border {
-    border: 1px solid #C9243F;
+.49ers.with-border {
+    border: 2px solid #C9243F;
 }
 
 .bills {
@@ -274,8 +321,8 @@
     box-sizing: border-box;
 }
 
-.bills .with-border {
-    border: 1px solid #DA2128;
+.bills.with-border {
+    border: 2px solid #DA2128;
 }
 
 .broncos {
@@ -284,8 +331,8 @@
     box-sizing: border-box;
 }
 
-.broncos .with-border {
-    border: 1px solid #F26522;
+.broncos.with-border {
+    border: 2px solid #F26522;
 }
 
 .chargers {
@@ -294,6 +341,10 @@
     box-sizing: border-box;
 }
 
-.chargers .with-border {
-    border: 1px solid #FFC20E;
+.chargers.with-border {
+    border: 2px solid #FFC20E;
+}
+
+.with-border {
+    border-radius: 5px;
 }
