--- a/stylesheets/teams/teams.css
+++ b/stylesheets/teams/teams.css
@@ -1,5 +1,5 @@
 .teams-container {
-    padding: 1em;
+    padding: 3em;
     margin-top: 3em;
     color: white;
 }
@@ -14,35 +14,38 @@
 }
 
 .matchup {
-    padding: 1em;
+    padding: .2em;
     position: relative;
+    margin-bottom: .2em;
 }
 
 .vs-ind {
     position: absolute;
-    left: 47.5%;
-    font-size: 2em;
-    top: 17.5%;
+    left: 49%;
+    font-size: 1em;
+    top: 25%;
     background: black;
     padding: .3em;
     border: 2px solid white;
     border-radius: 100px;
 }
 
+.team-name {
+    vertical-align: middle;
+}
+
 .team-img-left, .team-img-right {
-    position: absolute;
-    top: 25%;
-    left: 0;
-    width: 10%;
+    max-width: 20%;
+    float: left;
 }
 
 .team-img-left img, .team-img-right img {
-    width: 58%;
+    width: 100%;
+    height: auto;
 }
 
 .team-img-right {
-    left: initial;
-    right: 0;
+    float: right;
 }
 
 .cardinals {
@@ -72,7 +75,7 @@
 }
 
 .texans.with-border {
-    border: 2px solid #00143F;
+    border: 2px solid #C9243F;
 }
 
 .colts {
@@ -92,7 +95,7 @@
 }
 
 .packers.with-border {
-    border: 2px solid #2A433A;
+    border: 2px solid #FFC20E;
 }
 
 .cowboys {
@@ -105,6 +108,16 @@
     border: 2px solid white;
 }
 
+.vikings {
+    background-color: #4E2683;
+    color: white;
+    box-sizing: border-box;
+}
+
+.vikings.with-border {
+    border: 2px solid #FFC62F;
+}
+
 .seahawks {
     background-color: #002A5C;
     color: white;
@@ -112,7 +125,7 @@
 }
 
 .seahawks.with-border {
-    border: 2px solid #002A5C;
+    border: 2px solid #77C25F;
 }
 
 .falcons {
@@ -305,13 +318,13 @@
     border: 2px solid black;
 }
 
-.49ers {
+.ers {
     background-color: #C8AA76;
     color: white;
     box-sizing: border-box;
 }
 
-.49ers.with-border {
+.ers.with-border {
     border: 2px solid #C9243F;
 }
 
@@ -323,6 +336,16 @@
 
 .bills.with-border {
     border: 2px solid #DA2128;
+}
+
+.buccaneers {
+    background-color: #D50A0A;
+    color: white;
+    box-sizing: border-box;
+}
+
+.buccaneers.with-border {
+    border: 2px solid #B1BABF;
 }
 
 .broncos {
