--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -30,6 +30,11 @@ hr {
 	min-width: 800px;
 }
 
+.disable {
+	opacity: .5;
+	pointer-events: none;
+}
+
 .page-header a {
 	color: white;
 	text-decoration: none;
