--- a/stylesheets/teams/teams.css
+++ b/stylesheets/teams/teams.css
@@ -1,7 +1,17 @@
+.tally-section {
+    display: inline-block;
+    font-family: fantasy, sans-serif, serif;
+    width: 50%;
+    font-size: 3em;
+    text-align: center;
+}
+
 .teams-container {
     padding: 3em;
-    margin-top: 3em;
+    margin-top: 5em;
     color: white;
+    background: rgba(0, 0, 0, .8);
+    border-radius: 4px;
 }
 
 .match-team {
@@ -18,8 +28,7 @@
     position: relative;
     margin: auto;
     margin-bottom: .2em;
-    width: 75%;
-    min-width: 800px;
+    width: 100%;
 }
 
 .vs-ind {
