--- a/stylesheets/teams/teams.css
+++ b/stylesheets/teams/teams.css
@@ -1,3 +1,12 @@
+.finished {
+    opacity: .3;
+}
+
+.match-team.winner {
+    background: rgba(250, 250, 250, .5);
+    border: 3px solid white !important;
+}
+
 .wrapper.team-wrap {
     margin-top: 0;
     margin-bottom: 0;
