--- a/components/teampage.html
+++ b/components/teampage.html
@@ -4,7 +4,7 @@
 
         <div ng-repeat="record in records" class="tally-section">
             <div class="record-name">{{record.name}}</div>
-            <div class="record-score">{{record.score[0]}} - {{record.score[1]}}</div>
+            <div class="record-score">{{record.score[0]}} - {{record.score[1]}} - {{record.score[2]}}</div>
         </div>
 
     </div>
