--- a/stylesheets/likes.css
+++ b/stylesheets/likes.css
@@ -5,7 +5,8 @@
 .player-image-container img {
     width: 100%;
     max-width: 100%;
-    max-height: 250px;
+    max-width: 600px;
+    max-height: 400px;
 }
 
 .like {
