picks, bold predictions, and likes up for week 9

--- a/components/teampage.html
+++ b/components/teampage.html
@@ -1,3 +1,16 @@
+
+<div class="teams-container">
+    <h4>Bold Predictions</h4>
+    <div class="bold-prediction">
+        <ul>
+            <li>Giants / Eagles game will come down to a key Wentz turnover that seals the deal for the Giants -- Brent</li>
+            <li>Clive Walford will have a 20+ yard TD catch -- Brent</li>
+            <li>Marcus Mariota Will throw 5 TD passes against the Chargers -- David</li>
+        </ul>
+    </div>
+</div>
+
+
 <div class="teams-container" ng-controller="TeamController">
 
     <div class="wrapper team-wrap">
