jons bold preditcion added

--- a/components/teampage.html
+++ b/components/teampage.html
@@ -1,11 +1,12 @@
 
 <div class="teams-container">
     <h4>Bold Predictions</h4>
-    <div class="bold-prediction">
+    <div>
         <ul>
-            <li>Giants / Eagles game will come down to a key Wentz turnover that seals the deal for the Giants -- Brent</li>
-            <li>Clive Walford will have a 20+ yard TD catch -- Brent</li>
-            <li>Marcus Mariota Will throw 5 TD passes against the Chargers -- David</li>
+            <li class="bold-prediction">Giants / Eagles game will come down to a key Wentz turnover that seals the deal for the Giants -- Brent</li>
+            <li class="bold-prediction">Clive Walford will have a 20+ yard TD catch -- Brent</li>
+            <li class="bold-prediction">Marcus Mariota Will throw 5 TD passes against the Chargers -- David</li>
+            <li class="bold-prediction">Jay Ajayi Will rush for 150+ yards against the Jets -- Jon</li>
         </ul>
     </div>
 </div>
