brents picks week 10

--- a/components/teampage.html
+++ b/components/teampage.html
@@ -1,5 +1,5 @@
 
-<div class="teams-container">
+<!-- <div class="teams-container">
     <h4>Bold Predictions</h4>
     <div>
         <ul>
@@ -9,7 +9,7 @@
             <li class="bold-prediction">Jay Ajayi Will rush for 150+ yards against the Jets -- Jon</li>
         </ul>
     </div>
-</div>
+</div> -->
 
 
 <div class="teams-container" ng-controller="TeamController">
