setup for week 11

--- a/components/teampage.html
+++ b/components/teampage.html
@@ -1,16 +1,16 @@
 
-<div class="teams-container">
+<!-- <div class="teams-container">
     <h4>Bold Predictions</h4>
     <div>
         <ul>
-            <li class="bold-prediction">Matt Forte will rush for 100+ yards and a TD against the Rams -- Jon</li>
-            <li class="bold-prediction">Ben Roethlisberger will throw for 300+ yards against the Cowboys with 3 TDs -- Jon</li>
-            <li class="bold-prediction">Demaryius Thomas will catch two TDs against the Saints -- Brent</li>
-            <li class="bold-prediction">Aaron Rodgers goes over 400 yards passing against the Titans -- Brent</li>
-            <!-- <li class="bold-prediction">Jay Ajayi Will rush for 150+ yards against the Jets -- Jon</li> -->
+            <li class="bold-prediction"></li>
+            <li class="bold-prediction"></li>
+            <li class="bold-prediction"></li>
+            <li class="bold-prediction"></li>
+            <li class="bold-prediction"></li>
         </ul>
     </div>
-</div>
+</div> -->
 
 
 <div class="teams-container" ng-controller="TeamController">
