--- a/components/teampage.html
+++ b/components/teampage.html
@@ -8,6 +8,8 @@
             <li class="bold-prediction">Marcus Mariota outscores Cam Newton by 2 points or less -- David</li>
             <li class="bold-prediction">Eli Rogers has 7 catches and over 100 yards -- Brent</li>
             <li class="bold-prediction">Jordan Reed and Vernon David both score a TD this week -- Brent</li>
+       <li class="bold-prediction">Le'Veon Bell will reach 150 total yards and score twice -- Jon</li>
+        <li class="bold-prediction">KC DST will score a TD and will create 2 turnovers -- Jon</li>
         </ul>
     </div>
 </div>
