thursday picks up, disabled the likes button

--- a/components/teampage.html
+++ b/components/teampage.html
@@ -1,5 +1,5 @@
 
-<div class="teams-container">
+<!-- <div class="teams-container">
     <h4>Bold Predictions</h4>
     <div>
         <ul>
@@ -12,7 +12,7 @@
         <li class="bold-prediction">KC DST will score a TD and will create 2 turnovers -- Jon</li>
         </ul>
     </div>
-</div>
+</div> -->
 
 
 <div class="teams-container" ng-controller="TeamController">
