brent and davids picks and bold predictions for week 13

--- a/components/teampage.html
+++ b/components/teampage.html
@@ -1,18 +1,15 @@
 
-<!-- <div class="teams-container">
+<div class="teams-container">
     <h4>Bold Predictions</h4>
     <div>
         <ul>
-            <li class="bold-prediction">Cleveland will beat Pittsburgh -- David</li>
-            <li class="bold-prediction">Darren Sproles scores more fantasy points than Ryan Matthews -- David</li>
-            <li class="bold-prediction">Marcus Mariota outscores Cam Newton by 2 points or less -- David</li>
-            <li class="bold-prediction">Eli Rogers has 7 catches and over 100 yards -- Brent</li>
-            <li class="bold-prediction">Jordan Reed and Vernon Davis both score a TD this week -- Brent</li>
-       <li class="bold-prediction">Le'Veon Bell will reach 150 total yards and score twice -- Jon</li>
-        <li class="bold-prediction">KC DST will score a TD and will create 2 turnovers -- Jon</li>
+            <li class="bold-prediction">Jacksonville will beat Denver -- David</li>
+            <li class="bold-prediction">Dez will be the highest scoring skill position player in fantasy on the Cowboys -- David</li>
+            <li class="bold-prediction">Ben Roethlisberger throws two 2 point conversions -- Brent</li>
+            <li class="bold-prediction">Sammy Watkins has 150 yards receiving against Oakland -- Brent</li>
         </ul>
     </div>
-</div> -->
+</div>
 
 
 <div class="teams-container" ng-controller="TeamController">
