--- a/components/teampage.html
+++ b/components/teampage.html
@@ -3,10 +3,9 @@
     <h4>Bold Predictions</h4>
     <div>
         <ul>
-            <li class="bold-prediction">Jacksonville will beat Denver -- David</li>
-            <li class="bold-prediction">Dez will be the highest scoring skill position player in fantasy on the Cowboys -- David</li>
-            <li class="bold-prediction">Ben Roethlisberger throws two 2 point conversions -- Brent</li>
-            <li class="bold-prediction">Sammy Watkins has 150 yards receiving against Oakland -- Brent</li>
+            <li class="bold-prediction">Dion Lewis will score 15 plus points this week -- David</li>
+            <li class="bold-prediction">Sammy Watkins and Demaryious Thomas combine for 15 catches, 175 yards, 2 TDs -- Brent</li>
+            <li class="bold-prediction">Brent's upsets of the week: Jaguars over Vikings, 49ers over Jets, Ravens over Patriots</li>
         </ul>
     </div>
 </div>
