brent updated picks, was missing one

--- a/components/teampage.html
+++ b/components/teampage.html
@@ -8,7 +8,7 @@
             <li class="bold-prediction">Giants hold Zeke to less than 80 rushing yards -- Jon</li>
 
             <li class="bold-prediction">Sammy Watkins and Demaryious Thomas combine for 15 catches, 175 yards, 2 TDs -- Brent</li>
-            <li class="bold-prediction">Brent's upsets of the week: Jaguars over Vikings, 49ers over Jets, Ravens over Patriots</li>
+            <li class="bold-prediction">Brent's upsets of the week: 49ers over Jets, Ravens over Patriots</li>
         </ul>
     </div>
 </div>
