brents bold predictions

--- a/components/teampage.html
+++ b/components/teampage.html
@@ -3,12 +3,7 @@
     <h4>Bold Predictions</h4>
     <div>
         <ul>
-            <li class="bold-prediction">Dion Lewis will score 15 plus points this week -- David</li>
-            <li class="bold-prediction">Drew Brees and Jameis Winston both score 3 TD's and 300 yards -- Jon</li>
-            <li class="bold-prediction">Giants hold Zeke to less than 80 rushing yards -- Jon</li>
-
-            <li class="bold-prediction">Sammy Watkins and Demaryious Thomas combine for 15 catches, 175 yards, 2 TDs -- Brent</li>
-            <li class="bold-prediction">Brent's upsets of the week: 49ers over Jets, Ravens over Patriots</li>
+            <li class="bold-prediction">Broncos / Patriots game will be under 30 combined points -- Brent</li>
         </ul>
     </div>
 </div>
