--- a/components/teampage.html
+++ b/components/teampage.html
@@ -4,9 +4,11 @@
     <div>
         <ul>
             <li class="bold-prediction">Broncos / Patriots game will be under 30 combined points -- Brent</li>
-        <li class="bold-prediction">Giants D picks off Stafford 3 times -- Jon</li>
-        <li class="bold-prediction">Packers put up 30+ points against the bears -- Jon</li>
-        <li class="bold-prediction">Bell continues with his insanity and gets 200+ all purpose yards and 2 scores -- Jon</li>
+            <li class="bold-prediction">Ladarius Green 100+ yards and a TD -- Brent</li>
+            <li class="bold-prediction">Andrew Luck under 13 fantasy points this week -- Brent</li>
+            <li class="bold-prediction">Giants D picks off Stafford 3 times -- Jon</li>
+            <li class="bold-prediction">Packers put up 30+ points against the bears -- Jon</li>
+            <li class="bold-prediction">Bell continues with his insanity and gets 200+ all purpose yards and 2 scores -- Jon</li>
         </ul>
     </div>
 </div>
