--- a/components/superpage.html
+++ b/components/superpage.html
@@ -2,14 +2,14 @@
 	
 	<div class="super_num_top_container">
 		<div ng-repeat="numSet in team1.nums" class="super_num_top horizontal">
-			<img src="{{team1.pic}}" class="team-image">
+			<img src="images/patriots_super.jpg" class="team-image">
 			<div ng-repeat="num in numSet track by $index" ng-class="{'trailing-half': $index % 2 == 1}" class="super_half-num">{{num}}</div>
 		</div>
 	</div>
 
 	<div class="super_num_bot_container vertical">
 		<div ng-repeat="numSet in team2.nums" class="super_num_bot">
-			<img src="{{team2.pic}}" class="team-image">
+			<img src="images/falcons_super.jpg" class="team-image">
 			<div ng-repeat="num in numSet track by $index" ng-class="{'trailing-half': $index % 2 == 1}" class="super_half-num">{{num}}</div>
 		</div>
 	</div>
