--- a/stylesheets/super.css
+++ b/stylesheets/super.css
@@ -94,3 +94,28 @@
 	background: rgba(250, 250 , 250, .6);
 	color: black;
 }
+
+.Perry {
+	background-color: red;
+	color: black;
+}
+
+.Dustin {
+	background-color: pink;
+	color: black;
+}
+
+.Brent {
+	background-color: blue;
+	color: white;
+}
+
+.Brian {
+	background-color: aquamarine;
+	color: black;
+}
+
+.Chase {
+	background-color: forestgreen;
+	color: black;
+}
