--- a/stylesheets/super.css
+++ b/stylesheets/super.css
@@ -101,7 +101,7 @@
 }
 
 .Dustin {
-	background-color: pink;
+	background-color: hotpink;
 	color: black;
 }
 
@@ -111,8 +111,8 @@
 }
 
 .Brian {
-	background-color: aquamarine;
-	color: black;
+	background-color: teal;
+	color: white;
 }
 
 .Chase {
